Completed drawing a line chart Added Past golf swing data activity

--- a/branches/RealSwingV1/res/layout/collecting_acceleration.xml
+++ b/branches/RealSwingV1/res/layout/collecting_acceleration.xml
@@ -45,7 +45,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:gravity="center|center_vertical"
-        android:text="3 seconds left."
+        android:text=""
         android:textColor="#FFFFFF"
         android:textAppearance="?android:attr/textAppearanceMedium" />    
 
