--- a/branches/RealSwingV1/res/layout/home.xml
+++ b/branches/RealSwingV1/res/layout/home.xml
@@ -30,42 +30,56 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="10dp"
         android:orientation="vertical" >
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/home_real_swing_button"
         android:layout_width="260dp"
-        android:layout_height="90dp"
+        android:layout_height="80dp"
         android:background="#000000"
         android:layout_gravity="center"
         android:src="@drawable/menu_item1"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="10dp"
         android:orientation="vertical" >
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/home_collecting_data_button"
         android:layout_width="260dp"
-        android:layout_height="90dp"
+        android:layout_height="80dp"
         android:background="#000000"
         android:layout_gravity="center"
         android:src="@drawable/menu_item2"/>
     
 	<LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="30dp"
+        android:layout_height="10dp"
+        android:orientation="vertical" >
+    </LinearLayout>
+    
+    <ImageButton
+        android:id="@+id/home_pastswing_button"
+        android:layout_width="260dp"
+        android:layout_height="80dp"
+        android:background="#000000"
+        android:layout_gravity ="center"
+        android:src="@drawable/menu_item4"/>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
         android:orientation="vertical" >
     </LinearLayout>
     
     <ImageButton
         android:id="@+id/home_statistics_button"
         android:layout_width="260dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:background="#000000"
         android:layout_gravity="center"
         android:src="@drawable/menu_item3"/>
