--- a/res/layout/filemanager.xml
+++ b/res/layout/filemanager.xml
@@ -3,32 +3,33 @@
 	android:orientation="vertical" 
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<ListView 
-		android:id="@+id/filemanager_list" 
-		android:layout_width="fill_parent"
-		android:layout_height="370dp" />
-	
+
+	<ListView
+	    android:id="@+id/filemanager_list"
+	    android:layout_width="fill_parent"
+	    android:layout_height="353dp" />
+	
 	<LinearLayout
 	    android:layout_width="fill_parent"
-	    android:layout_height="50dp"
+	    android:layout_height="60dp"
 	    android:orientation="horizontal" >
 
 		<Button 
 			android:id="@+id/filemanager_delete_all" 
 			android:layout_width="100dp"
-			android:layout_weight="1" 
-			android:layout_height="50dp" 
+			android:layout_height="fill_parent" 
+			android:layout_weight="1" 			
 			android:text="Delete All"/>
 		<Button 
 			android:id="@+id/filemanager_delete" 
 			android:layout_width="100dp"
-			android:layout_height="50dp"
+			android:layout_height="fill_parent"
 			android:layout_weight="1" 			 
 			android:text="Delete"/>		
 		<Button
 		    android:id="@+id/filemanager_back"
 		    android:layout_width="100dp"
-		    android:layout_height="wrap_content"
+		    android:layout_height="fill_parent"
 		    android:layout_weight = "1"
 		    android:text="Back" />
 	</LinearLayout>
