--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -4,83 +4,108 @@
     android:layout_height="fill_parent"
     android:background="#000000"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_weight="0.75"
-            android:gravity="center"
-            android:text="Golf Swing Analyzer"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <ImageButton
-            android:id="@+id/home_settings_button"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="#000000"
-            android:gravity="center"
-            android:src="@drawable/settings" >
-        </ImageButton>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/home_real_swing_button"
-        android:layout_width="260dp"
-        android:layout_height="80dp"
-        android:background="#000000"
-        android:layout_gravity="center"
-        android:src="@drawable/menu_item1"/>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:orientation="vertical" >
-    </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/home_collecting_data_button"
-        android:layout_width="260dp"
-        android:layout_height="80dp"
-        android:background="#000000"
-        android:layout_gravity="center"
-        android:src="@drawable/menu_item2"/>
     
 	<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:orientation="vertical" >
+	    android:layout_width="fill_parent"
+	    android:layout_height="60dp"
+	    android:orientation="horizontal" >
+	    <TextView
+	        android:layout_width="250dp"
+	        android:layout_height="fill_parent"
+	        android:gravity="center|center_vertical"
+	        android:text="Golf Swing Analyzer"
+	        android:textAppearance="?android:attr/textAppearanceLarge" >
+	    </TextView>
+	   <ImageButton
+            android:id="@+id/collect_settings_button"
+            android:layout_width="60dp"
+            android:layout_height="fill_parent"
+            android:background="#000000"
+            android:gravity="center"
+            android:src="@drawable/settings_icon" >
+        </ImageButton>   
     </LinearLayout>
     
+	<LinearLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >	
     <ImageButton
-        android:id="@+id/home_pastswing_button"
-        android:layout_width="260dp"
-        android:layout_height="80dp"
+        android:id="@+id/collect_start_button"
+        android:layout_width="215dp"
+        android:layout_height="205dp"
+        android:layout_weight="1.95"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
         android:background="#000000"
-        android:layout_gravity ="center"
-        android:src="@drawable/menu_item4"/>
+        android:src="@drawable/press_button_icon_type"/>
+	        
 
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal" >    
+      	<TextView
+      	    android:id="@+id/collecting_placement"
+      	    android:layout_width="match_parent"
+      	    android:layout_height="fill_parent"      	    
+      	    android:layout_margin="1dp"
+      	    android:text="  Back side"
+      	    android:textAppearance="?android:attr/textAppearanceMedium"
+      	    android:textColor="#FFFFFF" />
+    </LinearLayout>
+	<TextView
+	        android:id="@+id/time_text_view"
+	        android:layout_width="match_parent"
+	        android:layout_height="30dp"
+	        android:gravity="left|center_vertical"	        
+	        android:text="Collection Time:"
+	        android:layout_margin="1dp"
+	        android:textColor="#FFFFFF"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="10dp"
-        android:orientation="vertical" >
+        android:orientation="vertical" >    
     </LinearLayout>
     
-    <ImageButton
-        android:id="@+id/home_statistics_button"
-        android:layout_width="260dp"
-        android:layout_height="80dp"
-        android:background="#000000"
-        android:layout_gravity="center"
-        android:src="@drawable/menu_item3"/>
+    <LinearLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal">    
+	    <ImageButton
+	        android:id="@+id/collect_external_swing_button"
+	        android:layout_width="100dp"
+	        android:layout_height="fill_parent"	        
+	        android:layout_gravity="center"
+	        android:text="External Data"
+	        android:layout_weight="1"
+	        android:background="#000000"
+	        android:textAppearance="?android:attr/textAppearanceMedium" 
+	        android:src="@drawable/external_swing_menu"/>	        
+	    <ImageButton 
+	        android:id="@+id/collect_past_swing_button"
+	        android:layout_width="90dp"
+	        android:layout_height="fill_parent"	        
+	        android:gravity="center"
+	        android:text="Past Swing"
+	        android:layout_weight="1"
+	        android:background="#000000"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:src="@drawable/past_swing_menu"/>
+	    <ImageButton 
+	        android:id="@+id/collect_stats_button"
+	        android:layout_width="100dp"
+	        android:layout_height="fill_parent"	        
+	        android:gravity="center"
+	        android:text="Stats"
+	        android:layout_weight="1"
+	        android:background="#000000"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:src="@drawable/stats_menu"/>
+	    
+    </LinearLayout>
 </LinearLayout>
